--- a/index.html
+++ b/index.html
@@ -9,6 +9,35 @@
   <link rel="stylesheet" href=" css/help.css">
   <link rel="stylesheet" href=" css/styles.css">
 
+  <script>var base_url = '.';</script>
+  
+  <!-- This is to handle the showing/hidding of elements in a dropdown -->
+  <script type="text/javascript">
+    function toggleDropDown(elem){
+      var children = elem.children;
+      for(var i=0; i < children.length; i++){
+        if(children[i].style.display == 'none' || children[i].nodeName == 'SUMMARY'){
+          children[i].style.display = '';
+        }
+        else{
+          children[i].style.display = 'none';
+        }
+      }
+    }
+    window.onload = function() {
+        var details = document.getElementsByTagName('details');
+        for(var i = 0; i < details.length; i++) {
+            var detail = details[i];
+            var cls = detail.className;
+            var dropdownCls = "dropdown-ct";
+            var indx = cls.indexOf(dropdownCls);
+            if(indx >= 0){
+              detail.onclick = toggleDropDown.bind(detail,detail);
+            }            
+        }
+    }
+  </script>
+
   
 
   
@@ -25,6 +54,80 @@
 <div class="admonition notice danger">
 <p class="admonition-title">CSS and HTML Incompatibilities</p>
 <p>It should be noted, that much of the style requirements are such to be able to support exporting for the AS Help as well as for standard webbrowsers. Because of this, many CSS or HTML elements may not be supported</p>
+</div>
+<h2 id="installation">Installation</h2>
+<pre><code>pip install mkdocs-br-industrial-theme
+</code></pre>
+<h2 id="using-the-theme">Using The Theme</h2>
+<p>In your mkdown.yml file set the theme usnig name brtheme.</p>
+<pre><code>theme:
+    name: brtheme
+</code></pre>
+<h2 id="extensions">Extensions</h2>
+<p>The adnomitions and pymdownx.details python markdown extension needs to be added to your mkdocs.yml file.</p>
+<pre><code class="language-yaml">markdown_extensions:
+    - admonition
+    - pymdownx.details
+</code></pre>
+<h2 id="general-markdown">General Markdown</h2>
+<h3 id="blue-tip-callout">Blue Tip Callout</h3>
+<p>This is accomplished using admonitions with the <code>notice</code> and <code>tips</code> classes. To implement, the following syntax can be used.</p>
+<pre><code class="language-markdown">    !!! notice tips &quot;Optional Title&quot;
+        Notice text
+</code></pre>
+<div class="admonition notice tips">
+<p class="admonition-title">Optional Title</p>
+<p>Notice tip text</p>
+</div>
+<h3 id="red-danger-callout">Red Danger Callout</h3>
+<p>This is accomplished using admonitions with the <code>notice</code> and <code>danger</code> classes. To implement, the following syntax can be used.</p>
+<pre><code class="language-markdown">    !!! notice danger &quot;Optional Title&quot;
+        Notice text
+</code></pre>
+<div class="admonition notice danger">
+<p class="admonition-title">Optional Title</p>
+<p>Notice danger text</p>
+</div>
+<h2 id="tables">Tables</h2>
+<p>Tables can be used with normal markdown syntax</p>
+<pre><code class="language-markdown">First Header  | Second Header
+------------- | -------------
+Content Cell  | Content Cell
+Content Cell  | Content Cell
+</code></pre>
+<table>
+<thead>
+<tr>
+<th>First Header</th>
+<th>Second Header</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Content Cell</td>
+<td>Content Cell</td>
+</tr>
+<tr>
+<td>Content Cell</td>
+<td>Content Cell</td>
+</tr>
+</tbody>
+</table>
+<h2 id="dropdown">DropDown</h2>
+<p>Drop down dynamic show/hide elements are also supported. This is accomplished using the markdown extension <code>details</code>.  To create a drop down the following syntax must be used:</p>
+<pre><code class="language-markdown">    ??? dropdown-ct &quot;Optional Title&quot;
+        Make sure to use include the dropdown-ct class name.
+</code></pre>
+<details class="dropdown-ct">
+<summary>Optional Title</summary>
+<p>Make sure to use include the dropdown-ct class name.</p>
+</details>
+<div class="admonition notice tips">
+<p class="admonition-title">Known Issues</p>
+<ul>
+<li>Lists do not currently work.</li>
+<li>codeblocks</li>
+</ul>
 </div>
   
 </body>
