Update to include site print

--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="./ css/theme.css">
-  <link rel="stylesheet" href="./ css/help.css">
-  <link rel="stylesheet" href="./ css/styles.css">
+  <link rel="stylesheet" href="/css/theme.css">
+  <link rel="stylesheet" href="/css/help.css">
+  <link rel="stylesheet" href="/css/styles.css">
 
   <!-- This is to handle the showing/hidding of elements in a dropdown -->
   <script type="text/javascript">
@@ -38,10 +38,23 @@
   </script>
 
   
+  <link href="/css/print-site-enum-headings1.css" rel="stylesheet">
+  
+  <link href="/css/print-site-enum-headings2.css" rel="stylesheet">
+  
+  <link href="/css/print-site-enum-headings3.css" rel="stylesheet">
+  
+  <link href="/css/print-site-enum-headings4.css" rel="stylesheet">
+  
+  <link href="/css/print-site-enum-headings5.css" rel="stylesheet">
+  
+  <link href="/css/print-site-enum-headings6.css" rel="stylesheet">
+  
+  <link href="/css/print-site.css" rel="stylesheet">
+  
 
   
-  <script>var base_url = '.';</script>
-
+  
 
   <title>MkDocs B&R Industrial Theme</title>
 
@@ -49,19 +62,10 @@
 
 <body>
   
-
-  <h1 id="search">Search Results</h1>
-
-  <form id="content_search" action="search.html">
-    <span role="status" aria-live="polite" class="ui-helper-hidden-accessible"></span>
-    <input name="q" id="mkdocs-search-query" type="text" class="search_input search-query ui-autocomplete-input" placeholder="Search the Docs" autocomplete="off">
-  </form>
-
-  <div id="mkdocs-search-results">
-    Sorry, page not found.
-  </div>
+  <h1>404 - Not found</h1>
 
 
+  
 </body>
 
 </html>
