--- a/print_page/index.html
+++ b/print_page/index.html
@@ -126,6 +126,18 @@
     - pymdownx.details
 </code></pre>
 <h2 id="index-general-markdown">General Markdown</h2>
+<h3 id="index-lists">Lists</h3>
+<p>It is possible to create basic lists with normal markdown syntax:</p>
+<pre><code>    - List Item 1
+    - Item 2
+    - Here ya go
+</code></pre>
+<ul>
+<li>List Item 1</li>
+<li>Item 2</li>
+<li>Here ya go</li>
+</ul>
+<p>As with most markdown, make sure to include extra whitespace above the list to have the styling work.</p>
 <h3 id="index-blue-tip-callout">Blue Tip Callout</h3>
 <p>This is accomplished using admonitions with the <code>notice</code> and <code>tips</code> classes. To implement, the following syntax can be used.</p>
 <pre><code class="language-markdown">    !!! notice tips &quot;Optional Title&quot;
@@ -188,7 +200,6 @@ Content Cell  | Content Cell
 <div class="admonition notice tips">
 <p class="admonition-title">Known Issues</p>
 <ul>
-<li>Lists do not currently work.</li>
 <li>codeblocks</li>
 <li>Probably other things as well..</li>
 </ul>
